# PowerTuneDigitalOfficial_Prism

./: .clang-format  .clang-tidy  .clangd  .git-commit-msg.txt  .gitignore  .qmllint.ini  BUILD.md  CMakeLists.txt  CMakePresets.json  PowerTune.qmlproject  PowerTune.qmlproject.qtds  PowertuneQMLGui.pro  README.md  TODO.md  UI_REVIEW_FINDINGS.plan.md  fix_localconf.py  main.cpp  qml.qrc  qmllint.ini  qtquickcontrols2.conf
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  cpplint_modified_files.yml  promote-dev-release.yml  qmllint.yml  release-app-bundle.yml
.kilocode/plans/: calibration_integration.plan.md  gauge_config_menu_build_ab1582dc.plan.md  next_features.plan.md  settings_ui_cleanup.plan.md
Can/: CanInterface.h  CanManager.cpp  CanManager.h  CanStartupManager.cpp  CanTransport.h
Can/Protocols/: ExBoardCan.cpp  ExBoardCan.h  PTExtenderCan.cpp  PTExtenderCan.h
Core/: DemoModeService.cpp  DemoModeService.h  DiagnosticsProvider.cpp  DiagnosticsProvider.h  DifferentialSensorCalc.h  ExBoardConfigManager.cpp  ExBoardConfigManager.h  OverlayConfigDefaults.cpp  OverlayConfigDefaults.h  PTExtenderConfigManager.cpp  PTExtenderConfigManager.h  PropertyRouter.cpp  PropertyRouter.h  RaceArcItem.cpp  RaceArcItem.h  ScreenControlService.cpp  ScreenControlService.h  SensorRegistry.cpp  SensorRegistry.h  appsettings.cpp  appsettings.h  connect.cpp  connect.h  dashboard.cpp  dashboard.h
Core/Models/: AnalogInputs.cpp  AnalogInputs.h  CanFrameModel.cpp  CanFrameModel.h  ConnectionData.cpp  ConnectionData.h  DataModels.h  DigitalInputs.cpp  DigitalInputs.h  ElectricMotorData.cpp  ElectricMotorData.h  EngineData.cpp  EngineData.h  ExpanderBoardData.cpp  ExpanderBoardData.h  FlagsData.cpp  FlagsData.h  GPSData.cpp  GPSData.h  SensorData.cpp  SensorData.h  SettingsData.cpp  SettingsData.h  TimingData.cpp  TimingData.h  UIState.cpp  UIState.h  VehicleData.cpp  VehicleData.h
ECU/: AdaptronicSelect.cpp  AdaptronicSelect.h  Apexi.cpp  Apexi.h  arduino.cpp  arduino.h  obd.cpp  obd.h
GPSTracks/: Laptimer.qml  qmldir
Gauges/: Advanced.qml  BarGauge.qml  Camera.qml  Charts.qml  Cluster.qml  Dashboard.qml  DashboardGaugeStyle.qml  DatasourcesList.qml  Dyno.qml  ForceMeter.qml  GPS.qml  GaugeNeedle_minus180to90.qml  GaugeNeedle_minus90to180.qml  HaltechFlags.qml  Keypad.qml  Mediaplayer.qml  MyTextLabel.qml  NormalGaugeStyle.qml  PFCSensors.qml  Picture.qml  RPMBARStyle2.qml  RPMBarStyle1.qml  RPMbar.qml  RPMbarStyle3.qml  RoundGauge.qml  SensorTest.qml  ShiftLights.qml  SpeedMeasurements.qml  SportDash.qml  SquareGaugeMain.qml  Squaregauge.qml  SquaregaugeRaceDash.qml  StateGIF.qml  Statepicture.qml  TachometerStyle.qml  Userdash1.qml  Userdash2.qml  Userdash3.qml  Verticalbargauge.qml  VirtualDyno.qml  (+4 more)
Gauges/Qt6Compat/: Gauge.qml  qmldir
Hardware/: Extender.cpp  Extender.h  gopro.cpp  gps.cpp  sensors.cpp
PowerTune/: CircularGauge.qml  CircularGaugeStyle.qml  Translator.qml  qmldir
PowerTune/Core/: AnalogInputs.qml  BoardConfigSection.qml  BootSplash.qml  BrightnessPopUp.qml  BrightnessPopup.qml  ConsultRegs.qml  DiffSensorConfigPopup.qml  DigitalInputsSection.qml  ExBoardAnalog.qml  ExtenderBoardTab.qml  GearSensorConfigPopup.qml  Intro.qml  Laptimecontainer.qml  Main.qml  OBDPIDS.qml  PTExtenderGpiSection.qml  PTExtenderIndicatorSection.qml  PTExtenderLedSection.qml  PTExtenderRelaySection.qml  PTExtenderSystemSection.qml  SerialSettings.qml  SettingsManager.qml  SpeedSensorConfigPopup.qml  qmldir
PowerTune/Dashboard/: AiMRaceDash.qml  ArcFillOverlay.qml  ArcGauge.qml  BackgroundSettingsPanel.qml  BottomStatusBar.qml  BrakeBiasBar.qml  ColorSelectionPanel.qml  DASHBOARD_REFACTOR_PLAN.md  DashboardTheme.qml  DraggableOverlay.qml  GaugeCreationMenu.qml  (+9 more)
QML/: AnalogInputs.qml  BrightnessPopUp.qml  ConsultRegs.qml  ExBoardAnalog.qml  Intro.qml  Laptimecontainer.qml  OBDPIDS.qml  SerialSettings.qml  main.qml  qmldir
Scripts/: backup-target-state.sh  bitbake-recipe.sh  bootstrap-yocto-ubuntu.sh  build-macos.sh  build-windows-ninja.ps1  check-target-can.sh  clean-macos.sh  deploy-native-can-target.sh  deploy-prebuilt-binary.sh  deploy-target-runtime.sh  format-all.sh  format-cpp.sh  format-qml.sh  init-yocto-workspace.sh  install-app-update.sh  multipass-yocto-exec.sh  multipass-yocto-shell.sh  qt6-migration.sh  run-macos.sh  setup-multipass-yocto-vm.sh  tail-target-log.sh  target-common.sh  windows-dev-bootstrap.ps1
Settings/: CanMonitor.qml  DashSelector.qml  DashSelectorWidget.qml  WifiCountryList.qml  analog.qml  help.qml  main.qml  network.qml  qmldir  rpm.qml  sensehat.qml  speed.qml  startup.qml  warn_gear.qml
Shaders/: arcgauge.frag  arcgauge.vert
Utils/: Calculations.cpp  Calculations.h  CalibrationHelper.cpp  CalibrationHelper.h  DataLogger.cpp  DataLogger.h  OverlayConfigManager.cpp  OverlayConfigManager.h  OverlayPositionManager.cpp  ParseGithubData.cpp  ShiftIndicatorHelper.cpp  ShiftIndicatorHelper.h  SignalSmoother.cpp  SignalSmoother.h  Speedo.cpp  Speedo.h  SteinhartCalculator.cpp  SteinhartCalculator.h  UDPReceiver.cpp  UDPReceiver.h  UdpTestSimulator.cpp  UdpTestSimulator.h  downloadmanager.cpp  downloadmanager.h  iomapdata.cpp  wifiscanner.cpp  wifiscanner.h
daemons/: EMUCANd
docs/: GAUGES_ANALYSIS.md  boot-splash-video-spec.md  memory-optimization.md  settings-ui-consolidation.md
docs-misc/: CODEBASE_REVIEW_AUDIT.md  EXTENDER_UDP_STEINHART_AUDIT_REPORT.md  EXTENDER_UDP_STEINHART_IMPLEMENTATION_SPEC.md  IMPLEMENTATION_PLAN.md  PROJECT_REFERENCE.md  UPDATE_ARTIFACT_CONTRACT.md  UPDATE_MANAGER_RUNBOOK.md  UPDATE_VALIDATION_MATRIX.md  dash-test-audit.md  dashboard-config-menus-audit.md  keyboard-design.md  overlay-config-system-spec.md  racedash-overlay-audit.md  racedash-signal-fix-plan.md  settings-theme-spec.md  settings-ui-audit.md
operating_platform/: config.txt  powertune.init.sh
src/: main.cpp
tests/: CMakeLists.txt  TestSettingsSupport.h
tests/Core/: AppSettingsSchemaAuditTest.cpp  MainAndVehicleSettingsRoundTripTest.cpp  OverlayPersistenceTest.cpp  ServiceAndManagerSettingsTest.cpp  SettingsBootstrapHydrationTest.cpp
(+381 files in other folders)
